# ugv_trajectory_tracking

./: CMakeLists.txt  README.md  package.xml
launch/: gvr_bot.launch  husky.launch  husky_control_simulation.launch  ugv.launch
scripts/: gvr_bot_commander.py  gvr_bot_control.py  ugv_commander.py  ugv_control.py
